Add Docker Build Push Stage 3